--- a/src/modules/commons/body.css
+++ b/src/modules/commons/body.css
@@ -2,6 +2,12 @@ body {
     margin: 0
 }
 
+a {
+    color: #5288bb;
+    font-weight: 500;
+    text-decoration: none;
+}
+
 .swal2-popup {
     font-family: 'Roboto', 'sans-seriff';
 }
